Add Tailwind CSS
create-react-app doesn't support custom postcss.config.js w/o ejecting
so build using postcss-cli into public/build and include the resulting
css file in public/index.html.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "postcss-cli": "^5.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "tailwindcss": "^0.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "watch:css": "postcss src/tailwind.css -o public/build/tailwind.css -w",
+    "build:css": "postcss src/tailwind.css -o public/build/tailwind.css",
+    "start": "npm run watch:css & react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
