--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.6",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "postcss-cli": "^5.0.0",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "tailwindcss": "^0.5.3"
