--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "postcss-cli": "^5.0.0",
-    "query-string": "^6.1.0",
+    "query-string": "5",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
